# gnss-sdr-configurator

./: .gitignore  README.md  pyproject.toml
schema/: SCHEMA_SPEC.md  schema.json
scraper/: README.md  extract_schema.py
src/gnss_sdr_configurator/: __init__.py  __main__.py
src/gnss_sdr_configurator/io/: conf_reader.py  conf_writer.py
src/gnss_sdr_configurator/model/: config.py  schema.py
src/gnss_sdr_configurator/tui/: app.py
src/gnss_sdr_configurator/tui/widgets/: param_row.py  splitter.py
